# esphome-efs

./: .gitignore  README.md  meson.build
components/efs/: __init__.py  crc16.h  efs.cpp  efs.h  header.h  obis_code.h  object.h  object_iterator.h  parser.cpp  parser.h  reader.h  result.h  sensor.py  status.h  value_iterator.h
test/: matchers.h  test_crc16.cpp  test_integration.cpp  test_node.yaml  test_parser.cpp  test_reader.cpp  test_result.cpp
